# memprobe_api

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
memprobe_cli/: __init__.py  __main__.py  budgets.py  cli.py  client.py  config.py  extract.py
tests/: test_budgets_config.py  test_cli.py  test_extract.py
tests/fixtures/: sample.elf
