[project]
name = "memprobe"
version = "0.1.0"
description = "Firmware memory budgets and size-regression checks for CI. Your binary stays local."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "memprobe" }]
keywords = ["firmware", "embedded", "elf", "memory", "ci", "size", "budget"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "click>=8.0",
    "pyelftools>=0.29",
    "requests>=2.25",
    "rich>=13.0",
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://memprobe.dev"
Documentation = "https://memprobe.dev/docs"

[project.scripts]
memprobe = "memprobe_cli.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["memprobe_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
